examples/test/testpolicy2248.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2248
  namespace: namespace491
spec:
  podSelector:
    matchLabels:
      key31: value42
      key41: value1
      key37: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value10
          key27: value12
      podSelector:
        matchLabels:
          key45: value37
          key21: value6
          key2: value48
